[tool.poetry]
name = "thorchainpy"
version = "0.0.2"
description = "Thorchain Python SDK"
packages = [
    { include = "thorchainpy" },
]
authors = ["sbneo2022"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.2"

[tool.poetry.dev-dependencies]
openapi-python-client = "0.13.3"
black = "22.6.0"
pytest = "7.1.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true
include = '.*\.pyi?$'
target-version = ['py311']
extend-exclude = '''
^/(
    \.vscode
  | thorchain_api_client
)$
'''